--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <h1 class="heading">
+        <img class="logo" src="assets/images/logo.png" alt="logo"> Love Maths
+    </h1>
+
+    <div class="game-area">
+
+    </div>
+
+    <div class="score-area">
+        <p class="scores">Correct Scores <span id="Score">0</span></p>
+        <p class="scores">Incorrect Scores <span id="Incorrect">0</span></p>
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
