--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </button>
         </div>
         <div class="question-area">
-            <span id=" operand1">0</span>
+            <span id="operand1">0</span>
             <span id="operator">x</span>
             <span id="operand2">0</span>
             <span>=</span>
@@ -44,8 +44,8 @@
     </div>
 
     <div class="score-area">
-        <p class="scores">Correct Scores <span id="Score">0</span></p>
-        <p class="scores">Incorrect Scores <span id="Incorrect">0</span></p>
+        <p class="scores">Correct Answers <span id="score">0</span></p>
+        <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
     </div>
     <script src="assets/js/script.js"></script>
 </body>
